// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`containers/Profile/components/.../ProjectForm when "name" and "description" are invalid renders correctly 1`] = `
<div>
  <div
    className="form-group"
  >
    <label
      className="required-error"
    >
      Name
    </label>
    <input
      defaultValue=""
      name="name"
      onChange={[Function]}
      type="text"
    />
  </div>
  <div
    className="form-group active"
  >
    <label
      className=""
    >
      Organisation
    </label>
    <div
      className="Select has-value is-clearable is-loading is-searchable Select--single"
      style={undefined}
    >
      <div
        className="Select-control"
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={undefined}
      >
        <span
          className="Select-multi-value-wrapper"
          id="react-select-4--value"
        >
          <div
            className="Select-value"
            style={undefined}
            title={undefined}
          >
            <span
              aria-selected="true"
              className="Select-value-label"
              id="react-select-4--value-item"
              role="option"
            >
              City of Oxford College
            </span>
          </div>
          <div
            className="Select-input"
            style={
              Object {
                "display": "inline-block",
              }
            }
          >
            <input
              aria-activedescendant="react-select-4--value"
              aria-describedby={undefined}
              aria-expanded="false"
              aria-haspopup="false"
              aria-label={undefined}
              aria-labelledby={undefined}
              aria-owns=""
              className="Select-input"
              id={undefined}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              required={false}
              role="combobox"
              tabIndex={undefined}
              value=""
            />
          </div>
        </span>
        <span
          aria-hidden="true"
          className="Select-loading-zone"
        >
          <span
            className="Select-loading"
          />
        </span>
        <span
          className="Select-arrow-zone"
          onMouseDown={[Function]}
        >
          <span
            className="Select-arrow"
            onMouseDown={[Function]}
          />
        </span>
      </div>
    </div>
  </div>
  <div
    className="form-group"
  >
    <label
      className="required-error"
    >
      Description
    </label>
    <input
      defaultValue=""
      name="description"
      onChange={[Function]}
      type="text"
    />
  </div>
  <div
    className="row"
  >
    <div
      className="col-xs-12 col-md-6"
    >
      <div
        className="form-group"
      >
        <label
          className=""
        >
          Date From
        </label>
        <div
          className="select double-select active"
          onClick={[Function]}
        >
          <span>
            March 2016
          </span>
        </div>
      </div>
    </div>
    <div
      className="col-xs-12 col-md-6"
    >
      <div
        className="form-group"
      >
        <label
          className=""
        >
          Date To
        </label>
        <div
          className="select double-select active"
          onClick={[Function]}
        >
          <span>
            May 2016
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`containers/Profile/components/.../ProjectForm when all inputs have no values renders correctly 1`] = `
<div>
  <div
    className="form-group"
  >
    <label
      className=""
    >
      Name
    </label>
    <input
      defaultValue={undefined}
      name="name"
      onChange={[Function]}
      type="text"
    />
  </div>
  <div
    className="form-group active"
  >
    <label
      className=""
    >
      Organisation
    </label>
    <div
      className="Select has-value is-clearable is-loading is-searchable Select--single"
      style={undefined}
    >
      <div
        className="Select-control"
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={undefined}
      >
        <span
          className="Select-multi-value-wrapper"
          id="react-select-2--value"
        >
          <div
            className="Select-value"
            style={undefined}
            title={undefined}
          >
            <span
              aria-selected="true"
              className="Select-value-label"
              id="react-select-2--value-item"
              role="option"
            />
          </div>
          <div
            className="Select-input"
            style={
              Object {
                "display": "inline-block",
              }
            }
          >
            <input
              aria-activedescendant="react-select-2--value"
              aria-describedby={undefined}
              aria-expanded="false"
              aria-haspopup="false"
              aria-label={undefined}
              aria-labelledby={undefined}
              aria-owns=""
              className="Select-input"
              id={undefined}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              required={false}
              role="combobox"
              tabIndex={undefined}
              value=""
            />
          </div>
        </span>
        <span
          aria-hidden="true"
          className="Select-loading-zone"
        >
          <span
            className="Select-loading"
          />
        </span>
        <span
          className="Select-arrow-zone"
          onMouseDown={[Function]}
        >
          <span
            className="Select-arrow"
            onMouseDown={[Function]}
          />
        </span>
      </div>
    </div>
  </div>
  <div
    className="form-group"
  >
    <label
      className=""
    >
      Description
    </label>
    <input
      defaultValue={undefined}
      name="description"
      onChange={[Function]}
      type="text"
    />
  </div>
  <div
    className="row"
  >
    <div
      className="col-xs-12 col-md-6"
    >
      <div
        className="form-group"
      >
        <label
          className=""
        >
          Date From
        </label>
        <div
          className="select double-select active"
          onClick={[Function]}
        >
          <span>
            April 2018
          </span>
        </div>
      </div>
    </div>
    <div
      className="col-xs-12 col-md-6"
    >
      <div
        className="form-group"
      >
        <label
          className=""
        >
          Date To
        </label>
        <div
          className="select double-select active"
          onClick={[Function]}
        >
          <span>
            Present
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`containers/Profile/components/.../ProjectForm when all inputs have values renders correctly 1`] = `
<div>
  <div
    className="form-group"
  >
    <label
      className=""
    >
      Name
    </label>
    <input
      defaultValue="Project1"
      name="name"
      onChange={[Function]}
      type="text"
    />
  </div>
  <div
    className="form-group active"
  >
    <label
      className=""
    >
      Organisation
    </label>
    <div
      className="Select has-value is-clearable is-loading is-searchable Select--single"
      style={undefined}
    >
      <div
        className="Select-control"
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={undefined}
      >
        <span
          className="Select-multi-value-wrapper"
          id="react-select-5--value"
        >
          <div
            className="Select-value"
            style={undefined}
            title={undefined}
          >
            <span
              aria-selected="true"
              className="Select-value-label"
              id="react-select-5--value-item"
              role="option"
            >
              City of Oxford College
            </span>
          </div>
          <div
            className="Select-input"
            style={
              Object {
                "display": "inline-block",
              }
            }
          >
            <input
              aria-activedescendant="react-select-5--value"
              aria-describedby={undefined}
              aria-expanded="false"
              aria-haspopup="false"
              aria-label={undefined}
              aria-labelledby={undefined}
              aria-owns=""
              className="Select-input"
              id={undefined}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              required={false}
              role="combobox"
              tabIndex={undefined}
              value=""
            />
          </div>
        </span>
        <span
          aria-hidden="true"
          className="Select-loading-zone"
        >
          <span
            className="Select-loading"
          />
        </span>
        <span
          className="Select-arrow-zone"
          onMouseDown={[Function]}
        >
          <span
            className="Select-arrow"
            onMouseDown={[Function]}
          />
        </span>
      </div>
    </div>
  </div>
  <div
    className="form-group"
  >
    <label
      className=""
    >
      Description
    </label>
    <input
      defaultValue="Lorem ipsum"
      name="description"
      onChange={[Function]}
      type="text"
    />
  </div>
  <div
    className="row"
  >
    <div
      className="col-xs-12 col-md-6"
    >
      <div
        className="form-group"
      >
        <label
          className=""
        >
          Date From
        </label>
        <div
          className="select double-select active"
          onClick={[Function]}
        >
          <span>
            March 2016
          </span>
        </div>
      </div>
    </div>
    <div
      className="col-xs-12 col-md-6"
    >
      <div
        className="form-group"
      >
        <label
          className=""
        >
          Date To
        </label>
        <div
          className="select double-select active"
          onClick={[Function]}
        >
          <span>
            May 2016
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`containers/Profile/components/.../ProjectForm when invalidDates is true renders correctly 1`] = `
<div>
  <div
    className="form-group"
  >
    <label
      className=""
    >
      Name
    </label>
    <input
      defaultValue={undefined}
      name="name"
      onChange={[Function]}
      type="text"
    />
  </div>
  <div
    className="form-group active"
  >
    <label
      className=""
    >
      Organisation
    </label>
    <div
      className="Select has-value is-clearable is-loading is-searchable Select--single"
      style={undefined}
    >
      <div
        className="Select-control"
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={undefined}
      >
        <span
          className="Select-multi-value-wrapper"
          id="react-select-3--value"
        >
          <div
            className="Select-value"
            style={undefined}
            title={undefined}
          >
            <span
              aria-selected="true"
              className="Select-value-label"
              id="react-select-3--value-item"
              role="option"
            />
          </div>
          <div
            className="Select-input"
            style={
              Object {
                "display": "inline-block",
              }
            }
          >
            <input
              aria-activedescendant="react-select-3--value"
              aria-describedby={undefined}
              aria-expanded="false"
              aria-haspopup="false"
              aria-label={undefined}
              aria-labelledby={undefined}
              aria-owns=""
              className="Select-input"
              id={undefined}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              required={false}
              role="combobox"
              tabIndex={undefined}
              value=""
            />
          </div>
        </span>
        <span
          aria-hidden="true"
          className="Select-loading-zone"
        >
          <span
            className="Select-loading"
          />
        </span>
        <span
          className="Select-arrow-zone"
          onMouseDown={[Function]}
        >
          <span
            className="Select-arrow"
            onMouseDown={[Function]}
          />
        </span>
      </div>
    </div>
  </div>
  <div
    className="form-group"
  >
    <label
      className=""
    >
      Description
    </label>
    <input
      defaultValue={undefined}
      name="description"
      onChange={[Function]}
      type="text"
    />
  </div>
  <div
    className="row"
  >
    <div
      className="col-xs-12 col-md-6"
    >
      <div
        className="form-group"
      >
        <label
          className=""
        >
          Date From
        </label>
        <div
          className="select double-select active"
          onClick={[Function]}
        >
          <span>
            April 2018
          </span>
        </div>
      </div>
    </div>
    <div
      className="col-xs-12 col-md-6"
    >
      <div
        className="form-group"
      >
        <label
          className=""
        >
          Date To
        </label>
        <div
          className="select double-select active"
          onClick={[Function]}
        >
          <span>
            Present
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    className="required-error"
  >
    Date To can not be earlier than Date From
  </div>
</div>
`;
